[gd_scene load_steps=5 format=3 uid="uid://bsr7pmwe84a7n"]

[ext_resource type="FontFile" uid="uid://bstyqfhv3nvy5" path="res://Font/PressStart2P-vaV7.ttf" id="1_85yq0"]
[ext_resource type="Script" path="res://Scenes/you_win.gd" id="1_y0kkp"]
[ext_resource type="Texture2D" uid="uid://brxd5fjt261wf" path="res://Assets/imagem_fim.jpeg" id="3_g0clp"]
[ext_resource type="AudioStream" uid="uid://cmyg226ohbqgl" path="res://Assets/musics/voce_ganhou.mp3" id="4_65bi0"]

[node name="YouWin" type="CanvasLayer"]
script = ExtResource("1_y0kkp")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.580392, 0.580392, 0.580392, 1)
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_g0clp")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Rows" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/Rows"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_85yq0")
theme_override_font_sizes/font_size = 50
text = "VOCÃŠ GANHOU!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/Rows"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Rows/CenterContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="MarginContainer/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_85yq0")
theme_override_font_sizes/font_size = 30
text = "JOGAR NOVAMENTE"

[node name="Quit" type="Button" parent="MarginContainer/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_85yq0")
theme_override_font_sizes/font_size = 30
text = "SAIR"

[node name="VoceGanhouMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_65bi0")
volume_db = -6.058

[connection signal="pressed" from="MarginContainer/PanelContainer/Rows/CenterContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/Rows/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
